# swagger.yml
@@ -94,13 +94,9 @@ paths:
                 password:
                   type: string
                   description: the password field for the user
-                phone:
-                  type: string
-                  description: the phone field for the user
               required:
                 - email
                 - password
-                - phone
       responses:
         200:
           description: Renders the update_customer template, to allow the customer to modify its data
@@ -159,12 +155,9 @@ paths:
                 lastname: 
                   type: string
                   description: the lastname field for the user
-                birthdate:
+                dateofbirth:
                   type: string
                   description: the birthday field for the user
-                phone:
-                  type: string
-                  description: the phone field for the user
               required:
                 - email
                 - password
